--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <link rel="stylesheet" href="change.css">
     <h1> Hi everyone</h1>
     <img> src="da_face.jpg"</img>
   </body>
