--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <link rel="stylesheet" href="change.css">
-    <h1 class="A"> Hi everyone</h1>
+    <h1> Hi everyone</h1>
     <img> src="da_face.jpg"</img>
   </body>
 </html>
