--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <body>
     <link rel="stylesheet" href="change.css">
-    <h1> Hi everyone</h1>
-    <img src="da_face.jpg" alt="my face"/>
+    <h1 class="A"> Hi everyone</h1>
   </body>
 </html>
