--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <link rel="stylesheet" href="change.css">
-    <h1 class="A"> Hi everyone</h1>
+    <h1> Hi everyone</h1>
   </body>
 </html>
