--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <link rel="stylesheet" href="change.css">
     <h1> Hi everyone</h1>
+    <img src="da_face.jpg" alt="my face">
   </body>
 </html>
