--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html>
   <body>
     <link rel="stylesheet" href="change.css">
-    <h1> Hi everyone</h1>
+    <h1> Hi everyone my name is Michael Durazo</h1>
     <img src="da_face.jpg" alt="my face">
+    <table style="width: 80%">
+      <tr>
+        <th>1</th>
+        <th>2</th>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>1</td>
+      </tr>
+    </table>
   </body>
 </html>
