--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
     <link rel="stylesheet" href="change.css">
     <h1> Hi everyone my name is Michael Durazo</h1>
-    <img src="da_face.jpg" alt="my face">
+    <img style="solid 1px;" src="da_face.jpg" alt="my face">
     <table style="width: 80%">
       <tr>
         <th>1</th>
