--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <h1> Hi everyone my name is Michael Durazo</h1>
     <img style="solid 1px;" src="da_face.jpg" alt="my face">
     <table style="width: 80%">
-      <tr>
+      <tr style="background-color: grey;">
         <th>1</th>
         <th>2</th>
       </tr>
