--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <td>1</td>
       </tr>
     </table>
-    <p style="font-size:200px">&#127790;</p>
+    <p style="font-size:200px; padding:1px">&#127790;</p>
     <ol>
       <li>Second</li>
       <li>first</li>
