--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         <th>2</th>
       </tr>
       <tr>
-        <td>2</td>
-        <td>1</td>
+        <td>This is a</td>
+        <td>test</td>
       </tr>
     </table>
     <p style="font-size:200px; padding:1px">&#127790;</p>
     <ol>
-      <li>Second</li>
-      <li>first</li>
-      <li>fourth</li>
+      <li>This is</li>
+      <li>also a</li>
+      <li>test</li>
     </ol>
   </body>
 </html>
