--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="change.css">
     <h1> Hi everyone my name is Michael Durazo</h1>
     <img style="solid 1px;" src="da_face.jpg" alt="my face">
+    <p style="font-size:200px; padding:1px; float: right;">&#127790;</p>
     <table style="width: 80%">
       <tr style="background-color: grey;">
         <th>1</th>
@@ -14,7 +15,6 @@
         <td>test</td>
       </tr>
     </table>
-    <p style="font-size:200px; padding:1px">&#127790;</p>
     <ol>
       <li>This is</li>
       <li>also a</li>
